--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ label {
 .locbody {
     height: 200px;
     overflow-y: auto;
-    border: 2px solid rgba(192, 29, 129, 1);
+    border: 2px solid rgb(128, 0, 128);
     border-radius: 5px;
     margin-top: 2px;
     background-color: #f5f5f5;
@@ -94,7 +94,7 @@ label {
 .header ul li i {
     margin-right: 12px;
     top: 2px;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 .header-right {
@@ -316,7 +316,7 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
     font-size: 17px;
     top: 66px;
     right: 14px;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 
@@ -337,12 +337,12 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
     padding: 12px 10px;
     color: #848484;
     font-size: 16px;
-    border: 1px solid rgba(192, 29, 129, 1);
+    border: 1px solid rgb(128, 0, 128);
     letter-spacing: 1px;
 }
 
 .header-middle form input[type="submit"] {
-    background: url(../images/search.png) no-repeat 4px 0px rgba(192, 29, 129, 1);
+    background: url(../images/search.png) no-repeat 4px 0px rgb(128, 0, 128);
     width: 11%;
     height: 50px;
     border: none;
@@ -402,7 +402,7 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
     padding: 2px 0px;
     font-size: 1em;
     border-radius: 2px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     visibility: hidden;
     opacity: 0;
     -o-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -420,7 +420,7 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
     height: 0;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-top: 5px solid rgba(192, 29, 129, 1);
+    border-top: 5px solid rgb(128, 0, 128);
     position: absolute;
     bottom: -4px;
     left: 21px;
@@ -440,7 +440,7 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
 
 .ban-top {
     display: flex;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 .dropdown-menu.columns-3 {
@@ -600,13 +600,13 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
 }
 
 .menu--shylock .menu__link::before {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     -webkit-transition-delay: 0.4s;
     transition-delay: 0.4s;
 }
 
 .menu--shylock .menu__link::after {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 a.menu__link {
@@ -636,7 +636,7 @@ a.menu__link {
 .agile_short_dropdown>li>a:hover {
     color: #fff;
     text-decoration: none;
-    background-color: rgba(192, 29, 129, 1);
+    background-color: rgb(128, 0, 128);
 }
 
 
@@ -648,7 +648,7 @@ a.menu__link {
 }
 
 .box_1 {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     padding: 15px 22px;
     text-align: center;
 }
@@ -758,7 +758,7 @@ a.simpleCart_empty {
 .carousel-caption h2 span,
 .carousel-caption h3 span {
     font-weight: 800;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
 }
 
@@ -1014,7 +1014,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.two {
     margin: 0 0 0 -4px;
     font-weight: 700;
     letter-spacing: 1px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     color: #fff;
 }
 
@@ -1062,7 +1062,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.two {
 
 .sign-gd ul li a:hover,
 .sign-gd-two ul li a:hover {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 .w3ls-post-grid:nth-child(2) {
@@ -1106,7 +1106,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.two {
 }
 
 .w3-address-right p a {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
     text-decoration: none;
 }
@@ -1148,7 +1148,7 @@ p.copy-right a {
 }
 
 p.copy-right a:hover {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
 }
 
@@ -1161,7 +1161,7 @@ p.copy-right a:hover {
 
 .footer-left h2 a span {
     padding: 0 10px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     ;
     font-weight: 600;
 }
@@ -1181,7 +1181,7 @@ p.copy-right a:hover {
 
 .multi-gd-img.multi-gd-text h4 span {
     font-weight: 700;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 .multi-gd-img.multi-gd-text {
@@ -1210,7 +1210,7 @@ p.copy-right a:hover {
     padding: 0.5em 1em;
     border: 0;
     width: 100%;
-    border-bottom: 1px solid rgba(192, 29, 129, 1);
+    border-bottom: 1px solid rgb(128, 0, 128);
     ;
     background: none;
     -webkit-appearance: none;
@@ -1267,7 +1267,7 @@ p.copy-right a:hover {
     display: block;
     width: 0;
     height: 2px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1317,7 +1317,7 @@ p.copy-right a:hover {
     color: #777;
     padding: 0.5em 1em 0.5em 0;
     border: 0;
-    border-bottom: 1px solid rgba(192, 29, 129, 1);
+    border-bottom: 1px solid rgb(128, 0, 128);
     background: #f0f2f5;
     -webkit-appearance: none;
     outline: none;
@@ -1353,13 +1353,13 @@ h3.agileinfo_sign span {
     margin: 0 0 0 -4px;
     font-weight: 700;
     letter-spacing: 1px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     ;
     color: #fff;
 }
 
 .modal-body.modal-body-sub_agile input[type="submit"]:hover {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 .modal_body_right.modal_body_right1 img {
@@ -1435,7 +1435,7 @@ button.close.top_wthree_agile {
 .w3ls_schedule_bottom_right_grid h3 {
     text-transform: uppercase;
     font-size: 1.4em;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
     letter-spacing: 2px;
     font-weight: 700;
@@ -1456,7 +1456,7 @@ button.close.top_wthree_agile {
 
 .w3l_schedule_bottom_right_grid1 i {
     font-size: 1.5em;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     display: block;
 }
 
@@ -1563,13 +1563,13 @@ h3.wthree_text_info span {
     backface-visibility: hidden;
     -moz-osx-font-smoothing: grayscale;
     position: relative;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 .hvr-outline-out:before {
     content: '';
     position: absolute;
-    border: rgba(192, 29, 129, 1) solid 4px;
+    border: rgb(128, 0, 128) solid 4px;
     top: 0;
     right: 0;
     bottom: 0;
@@ -1711,11 +1711,11 @@ h3.wthree_text_info span {
 }
 
 .my-cart-b {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     text-decoration: none;
     color: #fff;
     font-size: 1em;
-    border: 2px solid rgba(192, 29, 129, 1);
+    border: 2px solid rgb(128, 0, 128);
     padding: 0.4em;
     outline: none;
     width: 100%;
@@ -1727,7 +1727,7 @@ h3.wthree_text_info span {
 .snipcart-details input.button {
     font-size: 13px;
     color: #fff;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     text-decoration: none;
     position: relative;
     border: none;
@@ -1741,7 +1741,7 @@ h3.wthree_text_info span {
 
 .agile_top_brand_left_grid:hover .snipcart-details input.button,
 .snipcart-details input.button:hover {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 .product_list_header input.button {
@@ -1833,7 +1833,7 @@ h3.wthree_text_info span {
 button.w3view-cart {
     outline: none;
     border: none;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     width: 48px;
     height: 43px;
     font-size: 24px;
@@ -2058,7 +2058,7 @@ button.w3view-cart {
 }
 
 .link-product-add-cart:hover {
-    background: rgba(192, 29, 129, 1) none repeat scroll 0 0;
+    background: rgb(128, 0, 128) none repeat scroll 0 0;
     color: #fff;
 }
 
@@ -2141,7 +2141,7 @@ a.single-item {
 }
 
 .sale-w3ls h6 span {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 
@@ -2168,7 +2168,7 @@ a.single-item {
 }
 
 .sign-in a:hover {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
 }
 
@@ -2224,7 +2224,7 @@ a.single-item {
 }
 
 .login-grids p a:hover {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
 }
 
@@ -2341,7 +2341,7 @@ ul.multi-column-dropdown li a {
 
 .w3layouts_mail_grid_left2 h3 {
     font-size: 0.9em;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     margin: 0em 0 0.5em;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -2355,7 +2355,7 @@ ul.multi-column-dropdown li a {
 }
 
 .w3layouts_mail_grid_left2 a:hover {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 .w3layouts_mail_grid_left2 p {
@@ -2397,7 +2397,7 @@ ul.multi-column-dropdown li a {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     -webkit-transform: scale(0);
     transform: scale(0);
     -webkit-transition-property: transform;
@@ -2462,7 +2462,7 @@ ul.w3_short li {
 }
 
 ul.w3_short li a {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
     text-decoration: none;
 }
@@ -2551,7 +2551,7 @@ h3.tittle {
 }
 
 .contact-grid-agile-w3 h4 {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     ;
     font-size: 1.3em;
     margin: 20px 0;
@@ -2616,7 +2616,7 @@ h3.tittle {
     padding: 0.5em 1em;
     border: 0;
     width: 100%;
-    border-bottom: 1px solid rgba(192, 29, 129, 1);
+    border-bottom: 1px solid rgb(128, 0, 128);
     background: none;
     -webkit-appearance: none;
     outline: none;
@@ -2630,7 +2630,7 @@ h3.tittle {
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 1px;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     color: #fff;
 }
 
@@ -2774,7 +2774,7 @@ ul.bs-glyphicons-list li:hover span {
 
 h3.icon-subheading {
     font-size: 25px;
-    color: rgba(192, 29, 129, 1) !important;
+    color: rgb(128, 0, 128) !important;
     margin: 30px 0 15px;
     font-weight: 700
 }
@@ -3009,7 +3009,7 @@ h3.m_1 {
 h3.hdg,
 h3.bars {
     margin-bottom: 1em;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     font-weight: 700;
 }
 
@@ -3510,7 +3510,7 @@ h2.typoh2 {
 }
 
 .callbacks_here a:after {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
 }
 
 
@@ -3696,7 +3696,7 @@ ul.dropdown-menu6 li a {
 }
 
 .products-left i {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
 }
 
 
@@ -3708,7 +3708,7 @@ ul.dropdown-menu6 li a {
 
 .css-treeview h4,
 .community-poll h4 {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     text-align: center;
     background: #f7f7f7;
     padding: 17px 0;
@@ -3767,7 +3767,7 @@ ul.dropdown-menu6 li a {
     width: 18px;
     height: 18px;
     outline: none;
-    border: 3px solid rgba(192, 29, 129, 1);
+    border: 3px solid rgb(128, 0, 128);
     background: #fff;
     cursor: pointer;
 }
@@ -3832,7 +3832,7 @@ label.checkbox {
 }
 
 .radio input:checked+i {
-    border: 3px solid rgba(192, 29, 129, 1);
+    border: 3px solid rgb(128, 0, 128);
     background: #fff;
 }
 
@@ -3852,7 +3852,7 @@ label.checkbox {
 }
 
 .swit input[type="submit"] {
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     color: #fff;
     font-size: 15px;
     border: none;
@@ -3970,7 +3970,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.single_page_w3ls {
 .single-right-left h3 {
     text-transform: capitalize;
     font-size: 23px;
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     margin: 0;
     letter-spacing: 1px;
     font-weight: 600;
@@ -4166,7 +4166,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.single_page_w3ls {
 .add-review input[type="submit"] {
     outline: none;
     padding: 14px 0;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     border: none;
     width: 20%;
     font-size: 1em;
@@ -4182,7 +4182,7 @@ ul.social-nav.model-3d-0.footer-social.w3_agile_social.single_page_w3ls {
 .nav .open>a,
 .nav .open>a:hover,
 .nav .open>a:focus {
-    background-color: rgba(192, 29, 129, 1);
+    background-color: rgb(128, 0, 128);
     color: #fff;
 }
 
@@ -4334,7 +4334,7 @@ p.w3ls_para {
         font-size: 2em;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 4px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 4px 0px rgb(128, 0, 128);
         width: 15%;
     }
     .header-middle form input[type="search"] {
@@ -4523,7 +4523,7 @@ p.w3ls_para {
         width: 81%;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 4px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 4px 0px rgb(128, 0, 128);
         width: 17%;
     }
     .w3layouts_mail_grid_left {
@@ -4980,7 +4980,7 @@ p.w3ls_para {
         font-size: 13px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 19px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 19px 0px rgb(128, 0, 128);
         width: 9%;
     }
     .header-middle form input[type="search"] {
@@ -5069,7 +5069,7 @@ p.w3ls_para {
         font-size: 14px;
     }
     .hvr-outline-out:before {
-        border: rgba(192, 29, 129, 1) solid 2px;
+        border: rgb(128, 0, 128) solid 2px;
     }
     .hvr-outline-out:hover:before,
     .hvr-outline-out:focus:before,
@@ -5091,7 +5091,7 @@ p.w3ls_para {
         margin: 50px 0 17px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 8px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 8px 0px rgb(128, 0, 128);
         width: 9%;
     }
 }
@@ -5177,7 +5177,7 @@ p.w3ls_para {
     }
     .navbar-default .navbar-toggle:hover,
     .navbar-default .navbar-toggle:focus {
-        background-color: rgba(192, 29, 129, 1);
+        background-color: rgb(128, 0, 128);
     }
     .navbar-default .navbar-toggle .icon-bar {
         background-color: #FFF;
@@ -5353,7 +5353,7 @@ p.w3ls_para {
         left: -8px;
     }
     .hvr-outline-out:before {
-        border: rgba(192, 29, 129, 1) solid 4px;
+        border: rgb(128, 0, 128) solid 4px;
     }
     .new-gd-middle {
         width: 100%;
@@ -5453,7 +5453,7 @@ p.w3ls_para {
         width: 86%;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 8px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 8px 0px rgb(128, 0, 128);
         width: 10%;
     }
     .wthree_banner_bottom_grid_three_left1 {
@@ -5722,7 +5722,7 @@ p.w3ls_para {
         right: 21px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 8px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 8px 0px rgb(128, 0, 128);
         width: 11%;
     }
     .sign-gd,
@@ -5986,7 +5986,7 @@ p.w3ls_para {
         width: 83%;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 8px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 8px 0px rgb(128, 0, 128);
         width: 14%;
     }
     .carousel-caption p {
@@ -6125,7 +6125,7 @@ p.w3ls_para {
         font-size: 14px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 5px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 5px 0px rgb(128, 0, 128);
         width: 15%;
         height: 48px;
     }
@@ -6206,7 +6206,7 @@ p.w3ls_para {
         font-size: 14px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 5px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 5px 0px rgb(128, 0, 128);
         width: 15%;
         height: 48px;
     }
@@ -6415,7 +6415,7 @@ p.w3ls_para {
         width: 79%;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 7px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 7px 0px rgb(128, 0, 128);
         width: 18%;
         height: 48px;
     }
@@ -6479,7 +6479,7 @@ p.w3ls_para {
         font-size: 14px;
     }
     .header-middle form input[type="submit"] {
-        background: url(../images/search.png) no-repeat 0px 0px rgba(192, 29, 129, 1);
+        background: url(../images/search.png) no-repeat 0px 0px rgb(128, 0, 128);
         width: 17%;
         height: 44px;
     }
@@ -6707,7 +6707,7 @@ p.w3ls_para {
 
 .personalised {
     width: 63%;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     margin-left: 10%;
     margin-right: 10%;
     border: 0;
@@ -6791,7 +6791,7 @@ p.w3ls_para {
     width: 94%;
     margin-left: 3% !important;
     margin-right: 3%;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     font-weight: bold;
     color: #fff;
 }
@@ -6800,7 +6800,7 @@ p.w3ls_para {
     width: 70%;
     margin-left: 15% !important;
     margin-right: 15%;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     font-weight: bold;
     color: #fff;
 }
@@ -7057,13 +7057,13 @@ offer_header h3:hover {
 }
 
 .push .form-control {
-    border: 2px solid rgba(192, 29, 129, 1);
+    border: 2px solid rgb(128, 0, 128);
     background-color: #e9ebee;
 }
 
 .push .btn-success {
-    border: 1px solid rgba(192, 29, 129, 1);
-    background-color: rgba(192, 29, 129, 1);
+    border: 1px solid rgb(128, 0, 128);
+    background-color: rgb(128, 0, 128);
 }
 
 .searchtop {
