--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3738,7 +3738,7 @@ fieldset[disabled] .btn {
 .btn-default {
     color: #333;
     background-color: #000000;
-    border-color: rgba(192, 29, 129, 1);
+    border-color: rgb(128, 0, 128);
 }
 
 .btn-default:hover,
@@ -3748,7 +3748,7 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open>.dropdown-toggle.btn-default {
     color: #333;
-    background-color: rgba(192, 29, 129, 1);
+    background-color: rgb(128, 0, 128);
     border-color: #000000;
 }
 
@@ -3897,8 +3897,8 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open>.dropdown-toggle.btn-info {
     color: #fff;
-    background-color: rgba(192, 29, 129, 1);
-    border-color: rgba(192, 29, 129, 1);
+    background-color: rgb(128, 0, 128);
+    border-color: rgb(128, 0, 128);
 }
 
 .btn-info:active,
@@ -3936,7 +3936,7 @@ fieldset[disabled] .btn-info.active {
 
 .btn-warning {
     color: #fff;
-    background-color: rgba(192, 29, 129, 1);
+    background-color: rgb(128, 0, 128);
     border-color: #000000;
     padding: 20px;
     text-transform: uppercase;
@@ -4225,7 +4225,7 @@ tbody.collapse.in {
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-    color: rgba(192, 29, 129, 1);
+    color: rgb(128, 0, 128);
     text-decoration: none;
     background-color: #f5f5f5;
 }
