--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -61,7 +61,7 @@
     margin: 0;
     padding: 0;
     height: 202px;
-    border: 1px solid rgba(192, 29, 129, 1);
+    border: 1px solid rgb(128, 0, 128);
     display: flex;
     justify-content: center;
 }
