--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -54,7 +54,7 @@
  }
  
  .modal-header {
-     background-color: rgba(192, 29, 129, 1);
+     background-color: rgb(128, 0, 128);
      padding: 16px 16px;
      color: #FFF;
      border-bottom: 2px dashed #000000;
@@ -113,7 +113,7 @@
  }
  
  .toplogo {
-     background-color: rgba(192, 29, 129, 1);
+     background-color: rgb(128, 0, 128);
      width: 100%;
      height: 50px;
      color: #fff;
@@ -144,7 +144,7 @@
      position: relative;
      display: block;
      padding: 22px 15px;
-     background-color: rgba(192, 29, 129, 1);
+     background-color: rgb(128, 0, 128);
  }
  
  a.list-group-item {
