--- a/css/sidecart.css
+++ b/css/sidecart.css
@@ -73,7 +73,7 @@
     font-size: 1.5em;
     color: #fff;
     text-align: center;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 2%;
@@ -81,10 +81,10 @@
 }
 
 .cartitems {
-    border: 1px solid rgba(192, 29, 129, 1);
+    border: 1px solid rgb(128, 0, 128);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
     margin: 1.5em;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     border-radius: 5px;
     font-weight: 400;
     color: #fff;
@@ -168,7 +168,7 @@
     margin-top: 4px;
     color: #000000;
     text-align: center;
-    border: 2px solid rgba(192, 29, 129, 1);
+    border: 2px solid rgb(128, 0, 128);
 }
 
 #cart_product {
@@ -201,6 +201,6 @@
     text-align: center;
     margin: 15%;
     color: white;
-    background: rgba(192, 29, 129, 1);
+    background: rgb(128, 0, 128);
     text-transform: uppercase;
 }
